# bestboxdb

./: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile  README.md  pyproject.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
deploy/: .env.server.example  docker-compose.app.yml  docker-compose.infra.yml  init-db.sh
docs/: README.md  adding-erp-adapter.md  agentic-app.md  api-reference.md  faq.md  mcp-tools.md  user-guide.md
docs/superpowers/plans/: 2026-03-25-bestbox-erp-gateway.md  2026-03-25-redis-cache.md  2026-03-26-analytics.md  2026-03-26-docker-deployment.md
docs/superpowers/specs/: 2026-03-25-analytics-design.md  2026-03-25-bestbox-erp-gateway-design.md  2026-03-25-redis-cache-design.md  2026-03-26-docker-deployment-design.md
src/bestbox/adapters/cache/: __init__.py  inventory.py  orders.py  redis_cache.py
src/bestbox/adapters/smarttrade/: config.py
src/bestbox/core/domain/: inventory.py  orders.py
src/bestbox/core/ports/: inventory.py  orders.py
src/bestbox/mcp/: server.py
src/bestbox/rest/: main.py
src/bestbox/rest/routers/: inventory.py  orders.py
src/bestbox/services/: inventory.py  orders.py
tests/: conftest.py  test_new_tools.py
tests/integration/: test_cache_integration.py  test_smarttrade_inventory.py  test_smarttrade_orders.py
tests/unit/: test_cached_inventory.py  test_cached_orders.py  test_domain_inventory.py  test_domain_orders.py  test_inventory_service.py  test_order_service.py  test_redis_cache.py  test_rest_inventory.py  test_rest_orders.py
(+3 files in other folders)
