[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bestbox"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pyodbc>=5.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires live SmartTrade DB connection (deselect with -m 'not integration')",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bestbox"]
